✨ Add achievements view

--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -1,4 +1,5 @@
-app.name=Clean Code Developer
-user.name=User name
-app.menu.about=About
-app.menu.profile=Profile
+app.menu.about = About
+app.menu.achievements = Achievements
+app.menu.profile = Profile
+app.name = Clean Code Developer
+user.name = User name
