--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -1,4 +1,5 @@
-app.name=Clean Code Developer
-user.name=Benutzername
-app.menu.about=Über
-app.menu.profile=Profil
+app.menu.about = Über
+app.menu.achievements = Erfolge
+app.menu.profile = Profil
+app.name = Clean Code Developer
+user.name = Benutzername
