🈹 Add translation for name changing

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -2,4 +2,6 @@ app.menu.about = Über
 app.menu.achievements = Erfolge
 app.menu.profile = Profil
 app.name = Clean Code Developer
+profile.action.changed-username = Dein neuer Nutzername ist {0}
 user.name = Benutzername
+user.password = Passwort
