--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -2,4 +2,6 @@ app.menu.about = About
 app.menu.achievements = Achievements
 app.menu.profile = Profile
 app.name = Clean Code Developer
+profile.action.changed-username = Your new user name is {0}
 user.name = User name
+user.password = Password
