✨ Add journal view with grade progress bar

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -5,3 +5,4 @@ app.name = Clean Code Developer
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 user.name = Benutzername
 user.password = Passwort
+app.menu.journal = Journal
