--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -5,3 +5,4 @@ app.name = Clean Code Developer
 profile.action.changed-username = Your new user name is {0}
 user.name = User name
 user.password = Password
+app.menu.journal = Journal
