✨ Add `GradeView` wich displays the red grade

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -6,3 +6,4 @@ profile.action.changed-username = Dein neuer Nutzername ist {0}
 user.name = Benutzername
 user.password = Passwort
 app.menu.journal = Journal
+app.menu.compendium = Kompendium
