--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -6,3 +6,4 @@ profile.action.changed-username = Your new user name is {0}
 user.name = User name
 user.password = Password
 app.menu.journal = Journal
+app.menu.compendium = Compendium
