✨ Add "Orange Grade 2" to compendium

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -1,9 +1,13 @@
 app.menu.about = Über
 app.menu.achievements = Erfolge
+app.menu.compendium = Kompendium
+app.menu.journal = Journal
 app.menu.profile = Profil
 app.name = Clean Code Developer
+# Param 0: Number, Param 1: Color
+compendium.grade = Grade {0} {1}
+domain.grade.practices = Praktiken
+domain.grade.principles = Prinzipien
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 user.name = Benutzername
 user.password = Passwort
-app.menu.journal = Journal
-app.menu.compendium = Kompendium
