--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -1,9 +1,13 @@
 app.menu.about = About
 app.menu.achievements = Achievements
+app.menu.compendium = Compendium
+app.menu.journal = Journal
 app.menu.profile = Profile
 app.name = Clean Code Developer
+# Param 0: Number, Param 1: Color
+compendium.grade = Grade {0} {1}
+domain.grade.practices = practices
+domain.grade.principles = principles
 profile.action.changed-username = Your new user name is {0}
 user.name = User name
 user.password = Password
-app.menu.journal = Journal
-app.menu.compendium = Compendium
