✨ Add table view to compendium

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -6,6 +6,21 @@ app.menu.profile = Profil
 app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
+compendium.mode = Mode
+domain.grade.name = Name
+domain.grade.grade = Grad
+domain.grade.rating.continuousImprovement = Kontinuierliche Verbesserung
+domain.grade.rating.correctness = Korrektheit
+domain.grade.rating.evolvability = Evolvierbarkeit
+domain.grade.rating.productionEfficiency = Produktionseffizienz
+domain.grade.rating.responsibility = Verantwortlichkeit
+domain.grade.color.back = Black
+domain.grade.color.red = Red
+domain.grade.color.orange = Orange
+domain.grade.color.yellow = Yellow
+domain.grade.color.green = Green
+domain.grade.color.blue = Blue
+domain.grade.color.white = White
 domain.grade.practices = Praktiken
 domain.grade.principles = Prinzipien
 profile.action.changed-username = Dein neuer Nutzername ist {0}
