--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -6,6 +6,21 @@ app.menu.profile = Profile
 app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
+compendium.mode = Mode
+domain.grade.name = Name
+domain.grade.grade = Grade
+domain.grade.rating.continuousImprovement = Continuous Improvement
+domain.grade.rating.correctness = Correctness
+domain.grade.rating.evolvability = Evolvability
+domain.grade.rating.productionEfficiency = Production Efficiency
+domain.grade.rating.responsibility = Responsibility
+domain.grade.color.back = Schwarz
+domain.grade.color.red = Rot
+domain.grade.color.orange = Orange
+domain.grade.color.yellow = Gelb
+domain.grade.color.green = Grün
+domain.grade.color.blue = Blu
+domain.grade.color.white = Weiß
 domain.grade.practices = practices
 domain.grade.principles = principles
 profile.action.changed-username = Your new user name is {0}
