✨ Add rating to grade view

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -3,6 +3,7 @@ app.menu.achievements = Erfolge
 app.menu.compendium = Kompendium
 app.menu.journal = Journal
 app.menu.profile = Profil
+app.menu.grade = Grad
 app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
@@ -14,6 +15,8 @@ domain.grade.rating.correctness = Korrektheit
 domain.grade.rating.evolvability = Evolvierbarkeit
 domain.grade.rating.productionEfficiency = Produktionseffizienz
 domain.grade.rating.responsibility = Verantwortlichkeit
+domain.grade.rating.responsibility.team = Team
+domain.grade.rating.responsibility.singe-dev = Entwickler
 domain.grade.color.back = Black
 domain.grade.color.red = Red
 domain.grade.color.orange = Orange
