--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -3,6 +3,7 @@ app.menu.achievements = Achievements
 app.menu.compendium = Compendium
 app.menu.journal = Journal
 app.menu.profile = Profile
+app.menu.grade = Grade
 app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
@@ -14,6 +15,8 @@ domain.grade.rating.correctness = Correctness
 domain.grade.rating.evolvability = Evolvability
 domain.grade.rating.productionEfficiency = Production Efficiency
 domain.grade.rating.responsibility = Responsibility
+domain.grade.rating.responsibility.team = Team
+domain.grade.rating.responsibility.singe-dev = Single Dev
 domain.grade.color.back = Schwarz
 domain.grade.color.red = Rot
 domain.grade.color.orange = Orange
