✨ Add grade selection to profile

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -8,6 +8,8 @@ app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
+compendium.search-placeholder = Suche...
+compendium.filter = Filter
 domain.grade.name = Name
 domain.grade.grade = Grad
 domain.grade.rating.continuousImprovement = Kontinuierliche Verbesserung
@@ -17,15 +19,16 @@ domain.grade.rating.productionEfficiency = Produktionseffizienz
 domain.grade.rating.responsibility = Verantwortlichkeit
 domain.grade.rating.responsibility.team = Team
 domain.grade.rating.responsibility.singe-dev = Entwickler
-domain.grade.color.back = Black
-domain.grade.color.red = Red
+domain.grade.color.back = Schwarz
+domain.grade.color.red = Rot
 domain.grade.color.orange = Orange
-domain.grade.color.yellow = Yellow
-domain.grade.color.green = Green
-domain.grade.color.blue = Blue
-domain.grade.color.white = White
+domain.grade.color.yellow = Gelb
+domain.grade.color.green = Grün
+domain.grade.color.blue = Blu
+domain.grade.color.white = Weiß
 domain.grade.practices = Praktiken
 domain.grade.principles = Prinzipien
 profile.action.changed-username = Dein neuer Nutzername ist {0}
+profile.current-grade = Aktueller Grad
 user.name = Benutzername
 user.password = Passwort
