--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -8,6 +8,8 @@ app.name = Clean Code Developer
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
+compendium.search-placeholder = Search...
+compendium.filter = Filter
 domain.grade.name = Name
 domain.grade.grade = Grade
 domain.grade.rating.continuousImprovement = Continuous Improvement
@@ -17,15 +19,16 @@ domain.grade.rating.productionEfficiency = Production Efficiency
 domain.grade.rating.responsibility = Responsibility
 domain.grade.rating.responsibility.team = Team
 domain.grade.rating.responsibility.singe-dev = Single Dev
-domain.grade.color.back = Schwarz
-domain.grade.color.red = Rot
+domain.grade.color.back = Black
+domain.grade.color.red = Red
 domain.grade.color.orange = Orange
-domain.grade.color.yellow = Gelb
-domain.grade.color.green = Grün
-domain.grade.color.blue = Blu
-domain.grade.color.white = Weiß
+domain.grade.color.yellow = Yellow
+domain.grade.color.green = Green
+domain.grade.color.blue = Blue
+domain.grade.color.white = White
 domain.grade.practices = practices
 domain.grade.principles = principles
 profile.action.changed-username = Your new user name is {0}
+profile.current-grade = Current Grade
 user.name = User name
 user.password = Password
