✨ Add favorites to journal page

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -28,6 +28,7 @@ domain.grade.color.blue = Blu
 domain.grade.color.white = Weiß
 domain.grade.practices = Praktiken
 domain.grade.principles = Prinzipien
+journal.section.favorites = Auf was möchtest du heute Wert legen?
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 profile.current-grade = Aktueller Grad
 user.name = Benutzername
