--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -26,8 +26,9 @@ domain.grade.color.yellow = Yellow
 domain.grade.color.green = Green
 domain.grade.color.blue = Blue
 domain.grade.color.white = White
-domain.grade.practices = practices
-domain.grade.principles = principles
+domain.grade.practices = Practices
+domain.grade.principles = Principles
+journal.section.favorites = What do you want to focus on today?
 profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
 user.name = User name
