✨ Add log dialog

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -1,3 +1,5 @@
+app.action.add.log-achievement = Erfolg freischalten
+app.action.add.log-block = Log Eintrag anlegen
 app.menu.about = Über
 app.menu.achievements = Erfolge
 app.menu.compendium = Kompendium
@@ -28,6 +30,13 @@ domain.grade.color.blue = Blu
 domain.grade.color.white = Weiß
 domain.grade.practices = Praktiken
 domain.grade.principles = Prinzipien
+dialog.log.choose-block = Welchen Baustein möchtest du loggen?
+dialog.log.comment = Notiz
+dialog.log.comment.placeholder = Was hast du heute gut gemacht?
+dialog.log.vote.question = "Konntest du die Regeln des Bausteins berücksichtigen?"
+dialog.log.vote.question.yes = Ja
+dialog.log.vote.question.no = Nein
+dialog.log.vote.question.irrelevant = Spielten keine Rolle
 journal.section.favorites = Auf was möchtest du heute Wert legen?
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 profile.current-grade = Aktueller Grad
