--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -1,3 +1,5 @@
+app.action.add.log-achievement =  Activate achievement
+app.action.add.log-block = Create log entry
 app.menu.about = About
 app.menu.achievements = Achievements
 app.menu.compendium = Compendium
@@ -28,6 +30,8 @@ domain.grade.color.blue = Blue
 domain.grade.color.white = White
 domain.grade.practices = Practices
 domain.grade.principles = Principles
+dialog.log.comment = Note
+dialog.log.comment.placeholder = What did you do well today?
 journal.section.favorites = What do you want to focus on today?
 profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
