✨ Add log action

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -3,40 +3,42 @@ app.action.add.log-block = Log Eintrag anlegen
 app.menu.about = Über
 app.menu.achievements = Erfolge
 app.menu.compendium = Kompendium
+app.menu.grade = Grad
 app.menu.journal = Journal
 app.menu.profile = Profil
-app.menu.grade = Grad
 app.name = Clean Code Developer
+compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
 compendium.search-placeholder = Suche...
-compendium.filter = Filter
-domain.grade.name = Name
+dialog.log.cancel = Abbrechen
+dialog.log.choose-block = Welchen Baustein möchtest du loggen?
+dialog.log.comment = Notiz
+dialog.log.comment.placeholder = Was hast du heute gut gemacht?
+dialog.log.commit = Log Eintrag anlegen
+dialog.log.vote.question = Konntest du die Regeln des Bausteins berücksichtigen?
+dialog.log.vote.question.irrelevant = Spielten keine Rolle
+dialog.log.vote.question.no = Nein
+dialog.log.vote.question.yes = Ja
+domain.grade.color.back = Schwarz
+domain.grade.color.blue = Blu
+domain.grade.color.green = Grün
+domain.grade.color.orange = Orange
+domain.grade.color.red = Rot
+domain.grade.color.white = Weiß
+domain.grade.color.yellow = Gelb
 domain.grade.grade = Grad
+domain.grade.name = Name
+domain.grade.practices = Praktiken
+domain.grade.principles = Prinzipien
 domain.grade.rating.continuousImprovement = Kontinuierliche Verbesserung
 domain.grade.rating.correctness = Korrektheit
 domain.grade.rating.evolvability = Evolvierbarkeit
 domain.grade.rating.productionEfficiency = Produktionseffizienz
 domain.grade.rating.responsibility = Verantwortlichkeit
-domain.grade.rating.responsibility.team = Team
 domain.grade.rating.responsibility.singe-dev = Entwickler
-domain.grade.color.back = Schwarz
-domain.grade.color.red = Rot
-domain.grade.color.orange = Orange
-domain.grade.color.yellow = Gelb
-domain.grade.color.green = Grün
-domain.grade.color.blue = Blu
-domain.grade.color.white = Weiß
-domain.grade.practices = Praktiken
-domain.grade.principles = Prinzipien
-dialog.log.choose-block = Welchen Baustein möchtest du loggen?
-dialog.log.comment = Notiz
-dialog.log.comment.placeholder = Was hast du heute gut gemacht?
-dialog.log.vote.question = "Konntest du die Regeln des Bausteins berücksichtigen?"
-dialog.log.vote.question.yes = Ja
-dialog.log.vote.question.no = Nein
-dialog.log.vote.question.irrelevant = Spielten keine Rolle
+domain.grade.rating.responsibility.team = Team
 journal.section.favorites = Auf was möchtest du heute Wert legen?
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 profile.current-grade = Aktueller Grad
