--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -3,35 +3,42 @@ app.action.add.log-block = Create log entry
 app.menu.about = About
 app.menu.achievements = Achievements
 app.menu.compendium = Compendium
+app.menu.grade = Grade
 app.menu.journal = Journal
 app.menu.profile = Profile
-app.menu.grade = Grade
 app.name = Clean Code Developer
+compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
 compendium.search-placeholder = Search...
-compendium.filter = Filter
-domain.grade.name = Name
+dialog.log.cancel = Cancel
+dialog.log.choose-block = Which module do you want to log?
+dialog.log.comment = Note
+dialog.log.comment.placeholder = What did you do well today?
+dialog.log.commit = Create log entry
+dialog.log.vote.question = Were you able to follow the rules of the building block?
+dialog.log.vote.question.irrelevant = Didn't matter
+dialog.log.vote.question.no = No
+dialog.log.vote.question.yes = Yes
+domain.grade.color.back = Black
+domain.grade.color.blue = Blue
+domain.grade.color.green = Green
+domain.grade.color.orange = Orange
+domain.grade.color.red = Red
+domain.grade.color.white = White
+domain.grade.color.yellow = Yellow
 domain.grade.grade = Grade
+domain.grade.name = Name
+domain.grade.practices = Practices
+domain.grade.principles = Principles
 domain.grade.rating.continuousImprovement = Continuous Improvement
 domain.grade.rating.correctness = Correctness
 domain.grade.rating.evolvability = Evolvability
 domain.grade.rating.productionEfficiency = Production Efficiency
 domain.grade.rating.responsibility = Responsibility
-domain.grade.rating.responsibility.team = Team
 domain.grade.rating.responsibility.singe-dev = Single Dev
-domain.grade.color.back = Black
-domain.grade.color.red = Red
-domain.grade.color.orange = Orange
-domain.grade.color.yellow = Yellow
-domain.grade.color.green = Green
-domain.grade.color.blue = Blue
-domain.grade.color.white = White
-domain.grade.practices = Practices
-domain.grade.principles = Principles
-dialog.log.comment = Note
-dialog.log.comment.placeholder = What did you do well today?
+domain.grade.rating.responsibility.team = Team
 journal.section.favorites = What do you want to focus on today?
 profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
