🏆 Add achievements list

--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -44,3 +44,47 @@ profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
 user.name = User name
 user.password = Password
+achievement.clean-code.days-10 = Stick to a clean code rule for 10 days
+achievement.clean-code.days-3 = Stick to a clean code rule for 3 days
+achievement.clean-code.days-5 = Stick to a clean code rule for 5 days
+achievement.dev.automate-it = Automate a task
+achievement.dev.codereview = Do a code review
+achievement.dev.comment-code = Document the code
+achievement.dev.fresh-air = Treat yourself to a healthy snack
+achievement.dev.refacor-code = Do a major refactoring
+achievement.dev.write-test = Write a test
+achievement.grade.completed-run = Master a complete Clean Code run
+achievement.grade.grade-0 = Master the black grade
+achievement.grade.grade-1 = Master the red grade
+achievement.grade.grade-2 = Master the orange grade
+achievement.grade.grade-3 = Master the yello grade
+achievement.grade.grade-4 = Master the green grade
+achievement.grade.grade-5 = Master the blue grade
+achievement.grade.grade-6 = Master the white grade
+achievement.health.ergonomic-workplace = Set up your workplace ergonomically
+achievement.health.stand-1h = Work at least 1 hour standing
+achievement.healthy-snack = Gather ideas in the fresh air
+achievement.knowledge.hold-presentation = Present a theme to an audience
+achievement.knowledge.learn-new = Work yourself into a new theme
+achievement.knowledge.read-blog-entry = Read a developer blog entry
+achievement.knowledge.read-book = Read a book on development
+achievement.knowledge.write-blog-entry = Write a post in a forum or blog
+achievement.log.all-topics = Log to any topic of any grade
+achievement.log.days-10 = Log 10 days in a row
+achievement.log.days-100 = Log 100 days in a row
+achievement.log.days-25 = Log 25 days in a row
+achievement.log.days-3 = Log 3 days in a row
+achievement.log.days-5 = Log 5 days in a row
+achievement.log.days-60 = Log 60 days in a row
+achievement.social.comment-progress = Comment on a friend's progress
+achievement.social.invite-friend = Invite a friend to Clean Code
+achievement.social.pair-programming = Pair programming
+achievement.social.public-github-pull = Publish code on GitHub
+achievement.social.teach-clean-code = Explain a clean code topic to a friend
+achievement.group.grade = Grade
+achievement.group.log = Log
+achievement.group.cleancode = CleanCode
+achievement.group.social = Social
+achievement.group.dev = Dev
+achievement.group.health = Health
+achievement.group.knowledge = Knowledge
