🏆 Add achievements dialog

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -1,3 +1,47 @@
+achievement.clean-code.days-10 = Halte dich 10 Tage an eine Clean Code Regel
+achievement.clean-code.days-3 = Halte dich 3 Tage an eine Clean Code Regel
+achievement.clean-code.days-5 = Halte dich 5 Tage an eine Clean Code Regel
+achievement.dev.automate-it = Automatisiere eine Aufgabe
+achievement.dev.codereview = Führe ein Code Review durch
+achievement.dev.comment-code = Dokumentiere den Code
+achievement.dev.fresh-air = Sammle Ideen an der frischen Luft
+achievement.dev.refacor-code = Führe ein großes Refactoring durch
+achievement.dev.write-test = Schreibe einen Test
+achievement.grade.completed-run = Schaffe einen kompletten Clean Code Durchlauf
+achievement.grade.grade-0 = Schließe den schwarzen Grad ab
+achievement.grade.grade-1 = Schließe den roten Grad ab
+achievement.grade.grade-2 = Schließe den orangenen Grad ab
+achievement.grade.grade-3 = Schließe den gelben Grad ab
+achievement.grade.grade-4 = Schließe den grünen Grad ab
+achievement.grade.grade-5 = Schließe den blauen Grad ab
+achievement.grade.grade-6 = Schließe den weißen Grad ab
+achievement.group.cleancode = CleanCode
+achievement.group.dev = Entwicklung
+achievement.group.grade = Grad
+achievement.group.health = Gesundheit
+achievement.group.knowledge = Erfahrung
+achievement.group.log = Log
+achievement.group.social = Social
+achievement.health.ergonomic-workplace = Richte dir deinen Arbeitsplatz ergonomisch ein
+achievement.health.stand-1h = Arbeite mind. 1 Stunde im stehen
+achievement.healthy-snack = Gönne Dir einen gesunden Snack
+achievement.knowledge.hold-presentation = Präsentiere ein Thema vor Publikum
+achievement.knowledge.learn-new = Arbeite dich in ein neues Thema ein
+achievement.knowledge.read-blog-entry = Lese einen Entwickler Blogeintrag
+achievement.knowledge.read-book Lese ein Buch zu Entwicklung
+achievement.knowledge.write-blog-entry = Verfasse ein Beitrag in einem Forum oder Blog
+achievement.log.all-topics = Logge zu jedem Topic eines Grades
+achievement.log.days-10 = Logge 10 Tage am Stück
+achievement.log.days-100 = Logge 100 Tage am Stück
+achievement.log.days-25 = Logge 25 Tage am Stück
+achievement.log.days-3 = Logge 3 Tage am Stück
+achievement.log.days-5 = Logge 5 Tage am Stück
+achievement.log.days-60 = Logge 60 Tage am Stück
+achievement.social.comment-progress = Kommentiere den Fortschritt eines Freundes
+achievement.social.invite-friend = Lade einen Freund zu Clean Code ein
+achievement.social.pair-programming = Programmiere im Pair
+achievement.social.public-github-pull = Veröffentliche Code auf GitHub
+achievement.social.teach-clean-code = Erkläre einem Freund ein Clean Code Thema
 app.action.add.log-achievement = Erfolg freischalten
 app.action.add.log-block = Log Eintrag anlegen
 app.menu.about = Über
@@ -12,11 +56,17 @@ compendium.filter = Filter
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
 compendium.search-placeholder = Suche...
+dialog.achievement.achievement = Erfolg
+dialog.achievement.cancel = Abbrechen
+dialog.achievement.category = Kategorie
+dialog.achievement.commit = Erfolg freischalten
+dialog.achievement.committed = Erfolg wurde freigeschalten: {0}
 dialog.log.cancel = Abbrechen
 dialog.log.choose-block = Welchen Baustein möchtest du loggen?
 dialog.log.comment = Notiz
 dialog.log.comment.placeholder = Was hast du heute gut gemacht?
 dialog.log.commit = Log Eintrag anlegen
+dialog.log.committed = Log Eintrag angelegt: {0}
 dialog.log.vote.question = Konntest du die Regeln des Bausteins berücksichtigen?
 dialog.log.vote.question.irrelevant = Spielten keine Rolle
 dialog.log.vote.question.no = Nein
@@ -44,47 +94,3 @@ profile.action.changed-username = Dein neuer Nutzername ist {0}
 profile.current-grade = Aktueller Grad
 user.name = Benutzername
 user.password = Passwort
-achievement.clean-code.days-10 = Halte dich 10 Tage an eine Clean Code Regel
-achievement.clean-code.days-3 = Halte dich 3 Tage an eine Clean Code Regel
-achievement.clean-code.days-5 = Halte dich 5 Tage an eine Clean Code Regel
-achievement.dev.automate-it = Automatisiere eine Aufgabe
-achievement.dev.codereview = Führe ein Code Review durch
-achievement.dev.comment-code = Dokumentiere den Code
-achievement.dev.fresh-air = Sammle Ideen an der frischen Luft
-achievement.dev.refacor-code = Führe ein großes Refactoring durch
-achievement.dev.write-test = Schreibe einen Test
-achievement.grade.completed-run = Schaffe einen kompletten Clean Code Durchlauf
-achievement.grade.grade-0 = Schließe den schwarzen Grad ab
-achievement.grade.grade-1 = Schließe den roten Grad ab
-achievement.grade.grade-2 = Schließe den orangenen Grad ab
-achievement.grade.grade-3 = Schließe den gelben Grad ab
-achievement.grade.grade-4 = Schließe den grünen Grad ab
-achievement.grade.grade-5 = Schließe den blauen Grad ab
-achievement.grade.grade-6 = Schließe den weißen Grad ab
-achievement.health.ergonomic-workplace = Richte dir deinen Arbeitsplatz ergonomisch ein
-achievement.health.stand-1h = Arbeite mind. 1 Stunde im stehen
-achievement.healthy-snack = Gönne Dir einen gesunden Snack
-achievement.knowledge.hold-presentation = Präsentiere ein Thema vor Publikum
-achievement.knowledge.learn-new = Arbeite dich in ein neues Thema ein
-achievement.knowledge.read-blog-entry = Lese einen Entwickler Blogeintrag
-achievement.knowledge.read-book Lese ein Buch zu Entwicklung
-achievement.knowledge.write-blog-entry = Verfasse ein Beitrag in einem Forum oder Blog
-achievement.log.all-topics = Logge zu jedem Topic eines Grades
-achievement.log.days-10 = Logge 10 Tage am Stück
-achievement.log.days-100 = Logge 100 Tage am Stück
-achievement.log.days-25 = Logge 25 Tage am Stück
-achievement.log.days-3 = Logge 3 Tage am Stück
-achievement.log.days-5 = Logge 5 Tage am Stück
-achievement.log.days-60 = Logge 60 Tage am Stück
-achievement.social.comment-progress = Kommentiere den Fortschritt eines Freundes
-achievement.social.invite-friend = Lade einen Freund zu Clean Code ein
-achievement.social.pair-programming = Programmiere im Pair
-achievement.social.public-github-pull = Veröffentliche Code auf GitHub
-achievement.social.teach-clean-code = Erkläre einem Freund ein Clean Code Thema
-achievement.group.grade = Grad
-achievement.group.log = Log
-achievement.group.cleancode = CleanCode
-achievement.group.social = Social
-achievement.group.dev = Entwicklung
-achievement.group.health = Gesundheit
-achievement.group.knowledge = Erfahrung
