--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -1,4 +1,48 @@
-app.action.add.log-achievement =  Activate achievement
+achievement.clean-code.days-10 = Stick to a clean code rule for 10 days
+achievement.clean-code.days-3 = Stick to a clean code rule for 3 days
+achievement.clean-code.days-5 = Stick to a clean code rule for 5 days
+achievement.dev.automate-it = Automate a task
+achievement.dev.codereview = Do a code review
+achievement.dev.comment-code = Document the code
+achievement.dev.fresh-air = Treat yourself to a healthy snack
+achievement.dev.refacor-code = Do a major refactoring
+achievement.dev.write-test = Write a test
+achievement.grade.completed-run = Master a complete Clean Code run
+achievement.grade.grade-0 = Master the black grade
+achievement.grade.grade-1 = Master the red grade
+achievement.grade.grade-2 = Master the orange grade
+achievement.grade.grade-3 = Master the yello grade
+achievement.grade.grade-4 = Master the green grade
+achievement.grade.grade-5 = Master the blue grade
+achievement.grade.grade-6 = Master the white grade
+achievement.group.cleancode = CleanCode
+achievement.group.dev = Dev
+achievement.group.grade = Grade
+achievement.group.health = Health
+achievement.group.knowledge = Knowledge
+achievement.group.log = Log
+achievement.group.social = Social
+achievement.health.ergonomic-workplace = Set up your workplace ergonomically
+achievement.health.stand-1h = Work at least 1 hour standing
+achievement.healthy-snack = Gather ideas in the fresh air
+achievement.knowledge.hold-presentation = Present a theme to an audience
+achievement.knowledge.learn-new = Work yourself into a new theme
+achievement.knowledge.read-blog-entry = Read a developer blog entry
+achievement.knowledge.read-book = Read a book on development
+achievement.knowledge.write-blog-entry = Write a post in a forum or blog
+achievement.log.all-topics = Log to any topic of any grade
+achievement.log.days-10 = Log 10 days in a row
+achievement.log.days-100 = Log 100 days in a row
+achievement.log.days-25 = Log 25 days in a row
+achievement.log.days-3 = Log 3 days in a row
+achievement.log.days-5 = Log 5 days in a row
+achievement.log.days-60 = Log 60 days in a row
+achievement.social.comment-progress = Comment on a friend's progress
+achievement.social.invite-friend = Invite a friend to Clean Code
+achievement.social.pair-programming = Pair programming
+achievement.social.public-github-pull = Publish code on GitHub
+achievement.social.teach-clean-code = Explain a clean code topic to a friend
+app.action.add.log-achievement = Activate achievement
 app.action.add.log-block = Create log entry
 app.menu.about = About
 app.menu.achievements = Achievements
@@ -12,11 +56,17 @@ compendium.filter = Filter
 compendium.grade = Grade {0} {1}
 compendium.mode = Mode
 compendium.search-placeholder = Search...
+dialog.achievement.achievement = Achievement
+dialog.achievement.cancel = Cancel
+dialog.achievement.category = Category
+dialog.achievement.commit = Activate achievement
+dialog.achievement.committed = Activated achievement: {0}
 dialog.log.cancel = Cancel
 dialog.log.choose-block = Which module do you want to log?
 dialog.log.comment = Note
 dialog.log.comment.placeholder = What did you do well today?
 dialog.log.commit = Create log entry
+dialog.log.committed = Committed log entry: {0}
 dialog.log.vote.question = Were you able to follow the rules of the building block?
 dialog.log.vote.question.irrelevant = Didn't matter
 dialog.log.vote.question.no = No
@@ -44,47 +94,3 @@ profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
 user.name = User name
 user.password = Password
-achievement.clean-code.days-10 = Stick to a clean code rule for 10 days
-achievement.clean-code.days-3 = Stick to a clean code rule for 3 days
-achievement.clean-code.days-5 = Stick to a clean code rule for 5 days
-achievement.dev.automate-it = Automate a task
-achievement.dev.codereview = Do a code review
-achievement.dev.comment-code = Document the code
-achievement.dev.fresh-air = Treat yourself to a healthy snack
-achievement.dev.refacor-code = Do a major refactoring
-achievement.dev.write-test = Write a test
-achievement.grade.completed-run = Master a complete Clean Code run
-achievement.grade.grade-0 = Master the black grade
-achievement.grade.grade-1 = Master the red grade
-achievement.grade.grade-2 = Master the orange grade
-achievement.grade.grade-3 = Master the yello grade
-achievement.grade.grade-4 = Master the green grade
-achievement.grade.grade-5 = Master the blue grade
-achievement.grade.grade-6 = Master the white grade
-achievement.health.ergonomic-workplace = Set up your workplace ergonomically
-achievement.health.stand-1h = Work at least 1 hour standing
-achievement.healthy-snack = Gather ideas in the fresh air
-achievement.knowledge.hold-presentation = Present a theme to an audience
-achievement.knowledge.learn-new = Work yourself into a new theme
-achievement.knowledge.read-blog-entry = Read a developer blog entry
-achievement.knowledge.read-book = Read a book on development
-achievement.knowledge.write-blog-entry = Write a post in a forum or blog
-achievement.log.all-topics = Log to any topic of any grade
-achievement.log.days-10 = Log 10 days in a row
-achievement.log.days-100 = Log 100 days in a row
-achievement.log.days-25 = Log 25 days in a row
-achievement.log.days-3 = Log 3 days in a row
-achievement.log.days-5 = Log 5 days in a row
-achievement.log.days-60 = Log 60 days in a row
-achievement.social.comment-progress = Comment on a friend's progress
-achievement.social.invite-friend = Invite a friend to Clean Code
-achievement.social.pair-programming = Pair programming
-achievement.social.public-github-pull = Publish code on GitHub
-achievement.social.teach-clean-code = Explain a clean code topic to a friend
-achievement.group.grade = Grade
-achievement.group.log = Log
-achievement.group.cleancode = CleanCode
-achievement.group.social = Social
-achievement.group.dev = Dev
-achievement.group.health = Health
-achievement.group.knowledge = Knowledge
