🖊 Rename app to `Clean Code Journal`

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -28,7 +28,7 @@ achievement.healthy-snack = Gönne Dir einen gesunden Snack
 achievement.knowledge.hold-presentation = Präsentiere ein Thema vor Publikum
 achievement.knowledge.learn-new = Arbeite dich in ein neues Thema ein
 achievement.knowledge.read-blog-entry = Lese einen Entwickler Blogeintrag
-achievement.knowledge.read-book Lese ein Buch zu Entwicklung
+achievement.knowledge.read-book = Lese ein Buch zu Entwicklung
 achievement.knowledge.write-blog-entry = Verfasse ein Beitrag in einem Forum oder Blog
 achievement.log.all-topics = Logge zu jedem Topic eines Grades
 achievement.log.days-10 = Logge 10 Tage am Stück
@@ -50,7 +50,7 @@ app.menu.compendium = Kompendium
 app.menu.grade = Grad
 app.menu.journal = Journal
 app.menu.profile = Profil
-app.name = Clean Code Developer
+app.name = Clean Code Journal
 compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
