--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -50,7 +50,7 @@ app.menu.compendium = Compendium
 app.menu.grade = Grade
 app.menu.journal = Journal
 app.menu.profile = Profile
-app.name = Clean Code Developer
+app.name = Clean Code Journal
 compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
