📝 Add about page content

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -2,19 +2,19 @@ achievement.clean-code.days-10 = Halte dich 10 Tage an eine Clean Code Regel
 achievement.clean-code.days-3 = Halte dich 3 Tage an eine Clean Code Regel
 achievement.clean-code.days-5 = Halte dich 5 Tage an eine Clean Code Regel
 achievement.dev.automate-it = Automatisiere eine Aufgabe
-achievement.dev.codereview = F¸hre ein Code Review durch
+achievement.dev.codereview = F√ºhre ein Code Review durch
 achievement.dev.comment-code = Dokumentiere den Code
 achievement.dev.fresh-air = Sammle Ideen an der frischen Luft
-achievement.dev.refacor-code = F¸hre ein groﬂes Refactoring durch
+achievement.dev.refactor-code = F√ºhre ein gro√ües Refactoring durch
 achievement.dev.write-test = Schreibe einen Test
 achievement.grade.completed-run = Schaffe einen kompletten Clean Code Durchlauf
-achievement.grade.grade-0 = Schlieﬂe den schwarzen Grad ab
-achievement.grade.grade-1 = Schlieﬂe den roten Grad ab
-achievement.grade.grade-2 = Schlieﬂe den orangenen Grad ab
-achievement.grade.grade-3 = Schlieﬂe den gelben Grad ab
-achievement.grade.grade-4 = Schlieﬂe den gr¸nen Grad ab
-achievement.grade.grade-5 = Schlieﬂe den blauen Grad ab
-achievement.grade.grade-6 = Schlieﬂe den weiﬂen Grad ab
+achievement.grade.grade-0 = Schlie√üe den schwarzen Grad ab
+achievement.grade.grade-1 = Schlie√üe den roten Grad ab
+achievement.grade.grade-2 = Schlie√üe den orangenen Grad ab
+achievement.grade.grade-3 = Schlie√üe den gelben Grad ab
+achievement.grade.grade-4 = Schlie√üe den gr√ºnen Grad ab
+achievement.grade.grade-5 = Schlie√üe den blauen Grad ab
+achievement.grade.grade-6 = Schlie√üe den wei√üen Grad ab
 achievement.group.cleancode = CleanCode
 achievement.group.dev = Entwicklung
 achievement.group.grade = Grad
@@ -24,27 +24,27 @@ achievement.group.log = Log
 achievement.group.social = Social
 achievement.health.ergonomic-workplace = Richte dir deinen Arbeitsplatz ergonomisch ein
 achievement.health.stand-1h = Arbeite mind. 1 Stunde im stehen
-achievement.healthy-snack = Gˆnne Dir einen gesunden Snack
-achievement.knowledge.hold-presentation = Pr‰sentiere ein Thema vor Publikum
+achievement.healthy-snack = G√∂nne Dir einen gesunden Snack
+achievement.knowledge.hold-presentation = Pr√§sentiere ein Thema vor Publikum
 achievement.knowledge.learn-new = Arbeite dich in ein neues Thema ein
 achievement.knowledge.read-blog-entry = Lese einen Entwickler Blogeintrag
 achievement.knowledge.read-book = Lese ein Buch zu Entwicklung
 achievement.knowledge.write-blog-entry = Verfasse ein Beitrag in einem Forum oder Blog
 achievement.log.all-topics = Logge zu jedem Topic eines Grades
-achievement.log.days-10 = Logge 10 Tage am St¸ck
-achievement.log.days-100 = Logge 100 Tage am St¸ck
-achievement.log.days-25 = Logge 25 Tage am St¸ck
-achievement.log.days-3 = Logge 3 Tage am St¸ck
-achievement.log.days-5 = Logge 5 Tage am St¸ck
-achievement.log.days-60 = Logge 60 Tage am St¸ck
+achievement.log.days-10 = Logge 10 Tage am St√ºck
+achievement.log.days-100 = Logge 100 Tage am St√ºck
+achievement.log.days-25 = Logge 25 Tage am St√ºck
+achievement.log.days-3 = Logge 3 Tage am St√ºck
+achievement.log.days-5 = Logge 5 Tage am St√ºck
+achievement.log.days-60 = Logge 60 Tage am St√ºck
 achievement.social.comment-progress = Kommentiere den Fortschritt eines Freundes
 achievement.social.invite-friend = Lade einen Freund zu Clean Code ein
 achievement.social.pair-programming = Programmiere im Pair
-achievement.social.public-github-pull = Verˆffentliche Code auf GitHub
-achievement.social.teach-clean-code = Erkl‰re einem Freund ein Clean Code Thema
+achievement.social.public-github-pull = Ver√∂ffentliche Code auf GitHub
+achievement.social.teach-clean-code = Erkl√§re einem Freund ein Clean Code Thema
 app.action.add.log-achievement = Erfolg freischalten
 app.action.add.log-block = Log Eintrag anlegen
-app.menu.about = ‹ber
+app.menu.about = √úber
 app.menu.achievements = Erfolge
 app.menu.compendium = Kompendium
 app.menu.grade = Grad
@@ -62,21 +62,21 @@ dialog.achievement.category = Kategorie
 dialog.achievement.commit = Erfolg freischalten
 dialog.achievement.committed = Erfolg wurde freigeschalten: {0}
 dialog.log.cancel = Abbrechen
-dialog.log.choose-block = Welchen Baustein mˆchtest du loggen?
+dialog.log.choose-block = Welchen Baustein m√∂chtest du loggen?
 dialog.log.comment = Notiz
 dialog.log.comment.placeholder = Was hast du heute gut gemacht?
 dialog.log.commit = Log Eintrag anlegen
 dialog.log.committed = Log Eintrag angelegt: {0}
-dialog.log.vote.question = Konntest du die Regeln des Bausteins ber¸cksichtigen?
+dialog.log.vote.question = Konntest du die Regeln des Bausteins ber√ºcksichtigen?
 dialog.log.vote.question.irrelevant = Spielten keine Rolle
 dialog.log.vote.question.no = Nein
 dialog.log.vote.question.yes = Ja
 domain.grade.color.back = Schwarz
 domain.grade.color.blue = Blu
-domain.grade.color.green = Gr¸n
+domain.grade.color.green = Gr√ºn
 domain.grade.color.orange = Orange
 domain.grade.color.red = Rot
-domain.grade.color.white = Weiﬂ
+domain.grade.color.white = Wei√ü
 domain.grade.color.yellow = Gelb
 domain.grade.grade = Grad
 domain.grade.name = Name
@@ -89,8 +89,13 @@ domain.grade.rating.productionEfficiency = Produktionseffizienz
 domain.grade.rating.responsibility = Verantwortlichkeit
 domain.grade.rating.responsibility.singe-dev = Entwickler
 domain.grade.rating.responsibility.team = Team
-journal.section.favorites = Auf was mˆchtest du heute Wert legen?
+journal.section.favorites = Auf was m√∂chtest du heute Wert legen?
 profile.action.changed-username = Dein neuer Nutzername ist {0}
 profile.current-grade = Aktueller Grad
 user.name = Benutzername
 user.password = Passwort
+about.info = <p>Hast du schon einmal versucht den Weg eines <a href="https://clean-code-developer.de/" target="blank">Clean Code Developers</a> zu gehen und den wei√üen grad zu meistern? Diese Webapp hilft Dir diesen Weg einzuhalten und erinnert dich an deine aktuellen Ziele. Logge deinen Fortschritt und bekomme Belohnungen f√ºr deine erreichten Ziele üèÜ.</p> 
+about.info.technical = <p>Dieses Projekt ist eine Beispielapplikation f√ºr eine <a href="https://vaadin.com/" target="blank">Vaadin 14</a> Porgressive Web App. Es nutzt <a href="https://spring.io/projects/spring-boot" target="blank">Spring Boot</a> und l√§uft auf <a href="https://www.oracle.com/technetwork/java/javase/12-relnote-issues-5211422.html" target="blank">Java 12</a>. Diese Demo l√∂scht alle Nutzerdaten sobald die Session verloren geht.</p> 
+about.info.free = <p>Die Webapp ist Open Source, kostenlos und unter der MIT lizenziert. Davon ausgeschlossen ist Clean Code Content im Verzeichnis grades. Sie benutzt ausschlie√ülich kostenlose Vaadin Komponenten. Zum Ausf√ºhren oder Debuggen ist daher kein Vaadin Pro Abonnement erforderlich</p>
+about.info.tanks = <p>‚ù§ Das Beispiel nutzt Content von <a href="https://clean-code-developer.de" target="blank">clean-code-developer.de</a>. Ein gro√ües Dankesch√∂n geht <a href="https://ralfw.de/" target="blank">Ralf Westphal</a> der mir erlaubt hat, f√ºr die Beispiel App den Content zu verwenden.</p>
+about.info.sourcecode = <p>The Quellcode ist verf√ºgbar auf:<br><a href="https://github.com/TobseF/CleanCodeDeveloperJournal" target="blank">https://github.com/TobseF/CleanCodeDeveloperJournal</a></p>
