--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -5,7 +5,7 @@ achievement.dev.automate-it = Automate a task
 achievement.dev.codereview = Do a code review
 achievement.dev.comment-code = Document the code
 achievement.dev.fresh-air = Treat yourself to a healthy snack
-achievement.dev.refacor-code = Do a major refactoring
+achievement.dev.refactor-code = Do a major refactoring
 achievement.dev.write-test = Write a test
 achievement.grade.completed-run = Master a complete Clean Code run
 achievement.grade.grade-0 = Master the black grade
@@ -94,3 +94,8 @@ profile.action.changed-username = Your new user name is {0}
 profile.current-grade = Current Grade
 user.name = User name
 user.password = Password
+about.info = <p>Have you tried to become a <a href="https://clean-code-developer.de/" target="blank">Clean Code Developer</a> and master the white grade? This webapp helps you to keep the track and reminds you in your current grade goals. Log your progress and get achievements for your goals 🏆.</p>
+about.info.technical = <p>This project was built as a sample application for a <a href="https://vaadin.com/" target="blank">Vaadin 14</a> progressive web app. It uses <a href="https://spring.io/projects/spring-boot" target="blank">Spring Boot</a> and runs on <a href="https://www.oracle.com/technetwork/java/javase/12-relnote-issues-5211422.html" target="blank">Java 12</a>. For now this demo clears your data every time the session gets lost.</p>
+about.info.free = <p>This web app is open source, free and licenced under MIT. This licence does not apply to the Clean Code content, stored in the folder grades. It uses free open source Vaadin Components, so you don't need a Vaadin Pro subscription to run, start or debug it.</p>
+about.info.tanks = <p>❤ The samples contain content from <a href="https://clean-code-developer.com" target="blank">clean-code-developer.com</a>. Big thank you to <a href="https://ralfw.de/" target="blank">Ralf Westphal</a> who allowed me to use it for this sample.</p>
+about.info.sourcecode = <p>The source code is available at:<br><a href="https://github.com/TobseF/CleanCodeDeveloperJournal" target="blank">https://github.com/TobseF/CleanCodeDeveloperJournal</a></p>
