📚 Add grades 3,4,5 and 6 to compendium

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -72,7 +72,7 @@ dialog.log.vote.question.irrelevant = Spielten keine Rolle
 dialog.log.vote.question.no = Nein
 dialog.log.vote.question.yes = Ja
 domain.grade.color.back = Schwarz
-domain.grade.color.blue = Blu
+domain.grade.color.blue = Blau
 domain.grade.color.green = Grün
 domain.grade.color.orange = Orange
 domain.grade.color.red = Rot
