🔀 Add title link to point heroku users to current "clean-code.rocks"

--- a/src/main/resources/translation_de.properties
+++ b/src/main/resources/translation_de.properties
@@ -51,6 +51,7 @@ app.menu.grade = Grad
 app.menu.journal = Journal
 app.menu.profile = Profil
 app.name = Clean Code Journal
+app.outdated = Veraltet! Nutze die aktuelle Version auf: 
 compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
