--- a/src/main/resources/translation_en.properties
+++ b/src/main/resources/translation_en.properties
@@ -51,6 +51,7 @@ app.menu.grade = Grade
 app.menu.journal = Journal
 app.menu.profile = Profile
 app.name = Clean Code Journal
+app.outdated = Deprecated! Visit the current version on:
 compendium.filter = Filter
 # Param 0: Number, Param 1: Color
 compendium.grade = Grade {0} {1}
